@@ -9,6 +9,7 @@ Changelog
  * Rearranged SCSS folder structure to the client folder and split them approximately according to ITCSS. (Naomi Morduch Toubman, Jonny Scholes, Janneke Janssen, Hugo van den Berg)
  * Fix: ModelAdmin no longer fails when filtering over a foreign key relation (Jason Dilworth, Matt Westcott)
  * Fix: The Wagtail version number is now visible within the Settings menu (Kevin Howbrook)
+ * Fix: Scaling images now rounds values to an integer so that images render without errors (Adrian Brunyate)
 
 
 2.5 (24.04.2019)
